--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,7 @@
       
       <fieldset>
         <h2 class="fs-title">歡迎您參與本研究!</h2>
-        <h3 class="fs-subtitle">若您具有正常，或是矯正後的視力以及聽力，且法定為20歲以上之成年人，<br>請您詳閱此份線上 
-          <a href="https://drive.google.com/file/d/1pfOMcxbxmiNqfzGwli-BvpY_D8GpkyiW/view?usp=sharing">「研究參與者知情說明書」</a>，它將詳述您本研究之相關資訊及您的權利。
-        </h3>
+        <p>研究即將開始，請稍等研究員之指示！</p> 
           <input name="table_id" id="table_id" type="hidden" value={{table_id}} />
           <input name="start_time" id="start_time" type="hidden" value="" />
           <input type="button" name="entry" class="entry action-button" value="開始進行測驗" onclick="on_submit();"/>
