--- a/templates/thank.html
+++ b/templates/thank.html
@@ -24,7 +24,7 @@
       <li class="active">Finish</li>
     </ul>
   <fieldset>
-    <h2 class="fs-title">謝謝您的參與，我們會儘速發送禮券給您!</h2>
+    <h2 class="fs-title">再次感謝您的實驗參與!請確定已經與研究團隊確認領取研究報酬的相關事宜！</h2>
 
   </fieldset>
 </div>
