update wordings 1. usability assessments 2. thank message

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -132,15 +132,15 @@
       <fieldset class="feedbackcard">
           <h2 class="fs-title">回饋 1</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
+          <label class="statement">(*)請問您對於剛剛測試的 Audio Captcha 滿意程度為何？（1: 非常不滿意; 5: 非常滿意）</label>
           <ul class='likert'>
           <li>
             <input type="radio" name="likert_fb1_1" value="1">
-            <label>(1)非常不喜歡</label>
+            <label>(1)非常不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb1_1" value="2">
-            <label>(2)不喜歡</label>
+            <label>(2)不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb1_1" value="3">
@@ -148,22 +148,22 @@
           </li>
           <li>
             <input type="radio" name="likert_fb1_1" value="4">
-            <label>(4)喜歡</label>
+            <label>(4)滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb1_1" value="5">
-            <label>(5)非常喜歡</label>
+            <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb1_2" value="1">
-              <label>(1)非常難回答</label>
+              <label>(1)非常困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb1_2" value="2">
-              <label>(2)難回答</label>
+              <label>(2)困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb1_2" value="3">
@@ -171,15 +171,15 @@
             </li>
             <li>
               <input type="radio" name="likert_fb1_2" value="4">
-              <label>(4)好回答</label>
+              <label>(4)容易</label>
             </li>
             <li>
               <input type="radio" name="likert_fb1_2" value="5">
-              <label>(5)非常好回答</label>
+              <label>(5)非常容易</label>
             </li>
             </ul>
 
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼優點，讓你覺得滿意或容易回答？</label>
           <input type="text" name="text_fb1_1" id = "text_fb1_1"/>
 
           <!-- <label class="statement">Do you prefer the current alphanumeric audio CAPTCHAs you already use relative to this design?</label>
@@ -193,7 +193,7 @@
               <label>No</label>
             </li>
           </ul> -->
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼缺點，讓你覺得不滿意或難回答？</label>
           <input type="text" name="text_fb1_2" id = "text_fb1_2" />
 
           <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
@@ -266,15 +266,15 @@
     <fieldset class="feedbackcard">
       <h2 class="fs-title">回饋 2</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
+          <label class="statement">(*)請問您對於剛剛測試的 Audio Captcha 滿意程度為何？（1: 非常不滿意; 5: 非常滿意）</label>
           <ul class='likert'>
           <li>
             <input type="radio" name="likert_fb2_1" value="1">
-            <label>(1)非常不喜歡</label>
+            <label>(1)非常不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb2_1" value="2">
-            <label>(2)不喜歡</label>
+            <label>(2)不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb2_1" value="3">
@@ -282,22 +282,22 @@
           </li>
           <li>
             <input type="radio" name="likert_fb2_1" value="4">
-            <label>(4)喜歡</label>
+            <label>(4)滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb2_1" value="5">
-            <label>(5)非常喜歡</label>
+            <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb2_2" value="1">
-              <label>(1)非常難回答</label>
+              <label>(1)非常困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb2_2" value="2">
-              <label>(2)難回答</label>
+              <label>(2)困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb2_2" value="3">
@@ -305,15 +305,15 @@
             </li>
             <li>
               <input type="radio" name="likert_fb2_2" value="4">
-              <label>(4)好回答</label>
+              <label>(4)容易</label>
             </li>
             <li>
               <input type="radio" name="likert_fb2_2" value="5">
-              <label>(5)非常好回答</label>
+              <label>(5)非常容易</label>
             </li>
             </ul>
 
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼優點，讓你覺得滿意或容易回答？</label>
           <input type="text" name="text_fb2_1" id="text_fb2_1"/>
 
           <!-- <label class="statement">Do you prefer the current alphanumeric audio CAPTCHAs you already use relative to this design?</label>
@@ -327,7 +327,7 @@
               <label>No</label>
             </li>
           </ul> -->
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼缺點，讓你覺得不滿意或難回答？</label>
           <input type="text" name="text_fb2_2" id="text_fb2_2"/>
 
           <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
@@ -400,15 +400,15 @@
     <fieldset class="feedbackcard">
       <h2 class="fs-title">回饋 3</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
+          <label class="statement">(*)請問您對於剛剛測試的 Audio Captcha 滿意程度為何？（1: 非常不滿意; 5: 非常滿意）</label>
           <ul class='likert'>
           <li>
             <input type="radio" name="likert_fb3_1" value="1">
-            <label>(1)非常不喜歡</label>
+            <label>(1)非常不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb3_1" value="2">
-            <label>(2)不喜歡</label>
+            <label>(2)不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb3_1" value="3">
@@ -416,22 +416,22 @@
           </li>
           <li>
             <input type="radio" name="likert_fb3_1" value="4">
-            <label>(4)喜歡</label>
+            <label>(4)滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb3_1" value="5">
-            <label>(5)非常喜歡</label>
+            <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb3_2" value="1">
-              <label>(1)非常難回答</label>
+              <label>(1)非常困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb3_2" value="2">
-              <label>(2)難回答</label>
+              <label>(2)困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb3_2" value="3">
@@ -439,15 +439,15 @@
             </li>
             <li>
               <input type="radio" name="likert_fb3_2" value="4">
-              <label>(4)好回答</label>
+              <label>(4)容易</label>
             </li>
             <li>
               <input type="radio" name="likert_fb3_2" value="5">
-              <label>(5)非常好回答</label>
+              <label>(5)非常容易</label>
             </li>
             </ul>
 
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼優點，讓你覺得滿意或容易回答？</label>
           <input type="text" name="text_fb3_1" id = "text_fb3_1"/>
 
           <!-- <label class="statement">Do you prefer the current alphanumeric audio CAPTCHAs you already use relative to this design?</label>
@@ -461,7 +461,7 @@
               <label>No</label>
             </li>
           </ul> -->
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼缺點，讓你覺得不滿意或難回答？</label>
           <input type="text" name="text_fb3_2" id = "text_fb3_2"/>
 
           <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
@@ -533,15 +533,15 @@
     <fieldset class="feedbackcard">
       <h2 class="fs-title">回饋 4</h2>
           <h3 class="fs-subtitle">請回答以下問題（*必填）</h3>
-          <label class="statement">(*)請問您喜歡剛剛測試的 Audio CAPTCHA 嗎？（1: 非常不喜歡; 5: 非常喜歡）</label>
+          <label class="statement">(*)請問您對於剛剛測試的 Audio Captcha 滿意程度為何？（1: 非常不滿意; 5: 非常滿意）</label>
           <ul class='likert'>
           <li>
             <input type="radio" name="likert_fb4_1" value="1">
-            <label>(1)非常不喜歡</label>
+            <label>(1)非常不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb4_1" value="2">
-            <label>(2)不喜歡</label>
+            <label>(2)不滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb4_1" value="3">
@@ -549,22 +549,22 @@
           </li>
           <li>
             <input type="radio" name="likert_fb4_1" value="4">
-            <label>(4)喜歡</label>
+            <label>(4)滿意</label>
           </li>
           <li>
             <input type="radio" name="likert_fb4_1" value="5">
-            <label>(5)非常喜歡</label>
+            <label>(5)非常滿意</label>
           </li>
           </ul>
-          <label class="statement">(*)請問您剛剛測試的 Audio CAPTCHA 容易回答嗎？（1: 非常難回答; 5: 非常好回答）</label>
+          <label class="statement">(*)請問您認為剛剛測試的 Audio Captcha 的困難程度為何？（1: 非常困難; 5: 非常容易）</label>
           <ul class='likert'>
             <li>
               <input type="radio" name="likert_fb4_2" value="1">
-              <label>(1)非常難回答</label>
+              <label>(1)非常困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb4_2" value="2">
-              <label>(2)難回答</label>
+              <label>(2)困難</label>
             </li>
             <li>
               <input type="radio" name="likert_fb4_2" value="3">
@@ -572,18 +572,18 @@
             </li>
             <li>
               <input type="radio" name="likert_fb4_2" value="4">
-              <label>(4)好回答</label>
+              <label>(4)容易</label>
             </li>
             <li>
               <input type="radio" name="likert_fb4_2" value="5">
-              <label>(5)非常好回答</label>
+              <label>(5)非常容易</label>
             </li>
             </ul>
 
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼優點，讓你覺得喜歡或容易回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼優點，讓你覺得滿意或容易回答？</label>
           <input type="text" name="text_fb4_1" id="text_fb4_1"/>
 
-          <label class="statement">(*)請問您認為這個 Audio CAPTCHA 有什麼缺點，讓你覺得不喜歡或難回答？</label>
+          <label class="statement">(*)請問您認為這個 Audio Captcha 有什麼缺點，讓你覺得不滿意或難回答？</label>
           <input type="text" name="text_fb4_2" id="text_fb4_2"/>
 
           <label class="statement">對於這個 Audio CAPTCHA 您是否有什麼建議以及想法可以分享給我們？ </label>
