--- a/templates/thank.html
+++ b/templates/thank.html
@@ -24,7 +24,7 @@
       <li class="active">Finish</li>
     </ul>
   <fieldset>
-    <h2 class="fs-title">謝謝您的參與，我們會儘速發送禮券給您!</h2>
+    <h2 class="fs-title">謝謝您的參與，我們會在審核您的回覆後儘速發送禮券給您!</h2>
 
   </fieldset>
 </div>
